--- a/src/views/clinic-panel/pages/add-clinic/choose-center.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/choose-center.ejs
@@ -1,6 +1,6 @@
 <div class="tm-main-content" id="top">
   <!--======= FOLLOW BAR =====-->
-  <div id="section-i" class="tm-p tm-pt-20">
+  <div id="section-i" class="tm-p tm-pt-20 mt-5">
     <div class="container">
       <div class="tm-steps">
         <div class="tm-step active">
@@ -58,20 +58,35 @@
           </form>
           <% } %>
         </div>
-        <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
-          <div class="tm-box-info">
-            <div class="tm-box-top">
-              <img src="../user/img/clinic/attention.png" alt="Attention Icon" />
-              <div class="tm-box-title">Şirketin haklarını tamamen size ait mi?</div>
-            </div>
-            <div class="tm-box-bottom">
-              <div>Seçmiş olduğunuz merkezin bütün haklarının size ait olduğunu bir sonraki adıma geçerek onaylamış olacaksınız. Bir yanlışlık olduğunu veyahut hakların size ait olmadığını düşünüyorsanız lütfen seçiminizi tekrar gözden geçirin.</div>
-              <div>Merkezinizin size ait olduğunu doğrulayabilmemiz için bu bilgilerin eksiksiz ve doğru girilmesi gerekmektedir.</div>
 
-              <div>Ruhsat üzerinde ki isimi birebir doğru yazdığınızdan emin olun.</div>
-            </div>
+        
+
+        <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5">
+          <!--======= INFORMATION CARD =====-->
+          <div class="tm-box-info">
+              <div class="tm-box-top">
+                  <div class="col d-flex align-items-start">
+                      <div class="me-1"><img src="../user/img/clinic/attention.png" alt="Attention Icon" />
+                      </div>
+                      <div class="tm-box-title text-dark">Şirketin haklarını tamamen size ait mi?</div>
+                  </div>
+              </div>
+              <div class="tm-box-bottom">
+                  <div>
+                      Seçmiş olduğunuz merkezin bütün haklarının size ait olduğunu bir sonraki adıma
+                      geçerek onaylamış olacaksınız. Bir yanlışlık olduğunu veyahut hakların size ait
+                      olmadığını düşünüyorsanız lütfen seçiminizi tekrar gözden geçirin.
+                  </div>
+                  <div>
+                      Merkezinizin size ait olduğunu doğrulayabilmemiz için bu bilgilerin eksiksiz ve
+                      doğru girilmesi gerekmektedir.
+                  </div>
+                  <div>
+                      Ruhsat üzerinde ki isimi birebir doğru yazdığınızdan emin olun.
+                  </div>
+              </div>
           </div>
-        </div>
+      </div>
       </div>
     </div>
   </div>
