changing sidecard style on add center

--- a/src/views/clinic-panel/pages/add-clinic/choose-address.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/choose-address.ejs
@@ -1,6 +1,6 @@
 <div class="tm-main-content" id="top">
   <!--======= FOLLOW BAR =====-->
-  <div id="section-i" class="tm-p tm-pt-20">
+  <div id="section-i" class="tm-p tm-pt-20 mt-5">
     <div class="container">
       <div class="container">
         <div class="container">
@@ -27,7 +27,7 @@
   <div id="section-ii" class="tm-margin-3">
     <div class="container">
       <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6  mb-5">
           <div class="tm-section-title">Adres Bilgileri</div>
           <form class="tm-form-wide" action="/panel/address-correction" method="POST">
             <div class="form-group">
