--- a/src/views/clinic-panel/pages/add-clinic/company-information.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/company-information.ejs
@@ -1,6 +1,6 @@
 <div class="tm-main-content" id="top">
   <!--======= FOLLOW BAR =====-->
-  <div id="section-i" class="tm-p tm-pt-20">
+  <div id="section-i" class="tm-p tm-pt-20 mt-5">
     <div class="container">
       <div class="container">
         <div class="container">
@@ -45,7 +45,7 @@
             </div>
           </form>
         </div> -->
-        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 mt-3">
           <div class="tm-section-title">Şirket Bilgileri</div>
           <form class="tm-form-wide" action="/panel/choose-address" method="POST">
             <div class="form-group">
