--- a/src/views/clinic-panel/pages/add-clinic/payment-option.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/payment-option.ejs
@@ -25,7 +25,7 @@
   <div id="section-ii" class="tm-p-3 tm-pb-20">
     <div class="container">
       <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+        <div class="col-sm-12 col-md-12 col-lg-7 col-xl-7">
           <div class="tm-section-title tm-clinic-title">Ödeme İmkanları</div>
           <form class="tm-form-wide" action="/panel/doctors" method="POST">
             <div class="form-box">
@@ -128,22 +128,26 @@
           </form>
         </div>
         <!--======= INFORMATION CARD =====-->
-        <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
+        <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5">
           <div class="tm-section-title tm-clinic-subtitle mt-2"><a href="./clinic-doctors.html">Bu Adımı Atla</a></div>
           <div class="tm-box-info">
             <div class="tm-box-top">
+              <div class="col d-flex align-items-start">
               <img src="../user/img/clinic/attention.png" alt="Attention Icon" />
               <div class="tm-box-title">Bu adımları atlamanızı önermiyoruz.</div>
             </div>
+          </div>
             <div class="tm-box-bottom">
               <div>Bu bilgileri dilediğiniz gibi sonra doldurabilirsiniz fakat Dialysing.com olarak tüm bilgileri eksiksiz ve sırasıyla doldurmanızı ziyaretçilerinizin dikkatini daha fazla çekebilmeniz adına öneriyoruz</div>
             </div>
           </div>
           <div class="tm-box-info">
             <div class="tm-box-top">
+              <div class="col d-flex align-items-start">
               <img src="../user/img/clinic/attention.png" alt="Attention Icon" />
               <div class="tm-box-title">Ödemeler hangi şekilde ilerlemekte?</div>
             </div>
+          </div>
             <div class="tm-box-bottom">
               <div>Tedavi Ödemeleri hasta veya hastanın Sosyal Güvenlik Kurumu ile merkez arasında faturalama ve tahsilat yapılacak şekilde ilerlemektedir.</div>
               <div>Dialysing.com hiçbir şekilde hastalardan tahsilat işlemi içinde yer almamaktadır.</div>
