--- a/src/views/clinic-panel/pages/add-clinic/address-correction.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/address-correction.ejs
@@ -1,6 +1,6 @@
 <div class="tm-main-content" id="top">
   <!--======= FOLLOW BAR =====-->
-  <div id="section-i" class="tm-p tm-pt-20">
+  <div id="section-i" class="tm-p tm-pt-20 mt-5">
     <div class="container">
       <div class="container">
         <div class="container">
@@ -27,19 +27,22 @@
   <!--======= CENTER-CORRECT =====-->
   <div id="section-ii" class="tm-margin-3">
     <div class="container">
-      <div class="row">
+      <div class="row my-5 py-5">
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
           <div class="tm-section-title">Merkezin Konumunu Doğrulayın</div>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3015.2859557306465!2d29.178818115411026!3d40.909475579310936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cac47c95b36bdb%3A0x8bb9e11e2e5cab6f!2sCevizli%2C%20%C3%87ifteler%20Cd.%20No%3A44%2C%2034865%20Kartal%2F%C4%B0stanbul%2C%20Turkey!5e0!3m2!1sen!2sde!4v1639994685074!5m2!1sen!2sde" width="100%" height="500" style="border: 0" allowfullscreen="" loading="lazy"></iframe>
         </div>
+
         <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
           <div class="tm-box-info">
             <div class="tm-box-top">
+              <div class="col d-flex align-items-start">
               <img src="../user/img/clinic/attention.png" alt="Attention Icon" />
               <div class="tm-box-title">Seçim yaparken nelere dikkat etmeliyim?</div>
             </div>
+          </div>
             <div class="tm-box-bottom">
               <div>Bu harita sitemizde hastalarımıza Türkmed Diyaliz Merkezini göstereceğimiz konumdur. Haritada raptiyeyi merkezinizin tam konumuyla eşleşecek şekilde ayarlayın.</div>
               <div>Merkezinizin size ait olduğunu doğrulayabilmemiz için bu bilgilerin eksiksiz ve doğru girilmesi gerekmektedir.</div>
