--- a/src/views/clinic-panel/pages/add-clinic/clinic-detail.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/clinic-detail.ejs
@@ -25,7 +25,7 @@
   <div id="section-ii" class="tm-p-3 tm-pb-20">
     <div class="container">
       <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+        <div class="col-sm-12 col-md-12 col-lg-7 col-xl-7">
           <div class="tm-section-title tm-clinic-title">Merkez Detayları</div>
           <form class="tm-form-wide" action="/panel/clinic-services" method="POST">
             <div class="form-box">
@@ -147,13 +147,15 @@
             </div>
           </form>
         </div>
-        <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
+        <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5">
           <div class="tm-section-title tm-clinic-subtitle"><a href="./clinic-services.html">Bu Adımı Atla</a></div>
           <!--======= INFORMATION CARD =====-->
           <div class="tm-box-info">
             <div class="tm-box-top">
+              <div class="col d-flex align-items-start">
               <img src="../user/img/clinic/attention.png" alt="Attention Icon" />
               <div class="tm-box-title">Bu adımları atlamanızı önermiyoruz.</div>
+            </div>
             </div>
             <!--======= INFORMATION CARD =====-->
             <div class="tm-box-bottom">
