--- a/src/views/clinic-panel/pages/add-clinic/doctors.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/doctors.ejs
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="row">
         <!--======= MERKEZ SAĞLIK ÇALIŞANLARI =====-->
-        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+        <div class="col-sm-12 col-md-12 col-lg-7 col-xl-7">
           <div class="tm-section-title tm-clinic-title">Merkez Sağlık Çalışanları</div>
           <form class="tm-form-wide" action="/panel/clinic-summary" method="GET">
             <div class="form-box">
@@ -102,22 +102,26 @@
           </form>
         </div>
         <!--======= INFORMATION CARD =====-->
-        <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
+        <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5">
           <div class="tm-section-title tm-clinic-subtitle">Bu Adımı Atla</div>
           <div class="tm-box-info">
             <div class="tm-box-top">
+              <div class="col d-flex align-items-start">
               <img src="../user/img/clinic/attention.png" alt="Attention Icon" />
               <div class="tm-box-title">Bu adımları atlamanızı önermiyoruz.</div>
             </div>
+          </div>
             <div class="tm-box-bottom">
               <div>Bu bilgileri dilediğiniz gibi sonra doldurabilirsiniz fakat Dialysing.com olarak tüm bilgileri eksiksiz ve sırasıyla doldurmanızı ziyaretçilerinizin dikkatini daha fazla çekebilmeniz adına öneriyoruz</div>
             </div>
           </div>
           <div class="tm-box-info">
             <div class="tm-box-top">
+              <div class="col d-flex align-items-start">
               <img src="../user/img/clinic/attention.png" alt="Attention Icon" />
               <div class="tm-box-title">Bilgileri daha sonrasında değiştirebiliyor muyum?</div>
             </div>
+          </div>
             <div class="tm-box-bottom">
               <div>Bu bilgileri merkezinizi listeledikten sonra güncelleyebilir veya değiştirebilirsiniz. Bu bilgilerin doğru girilmesi hastalarınızın merkezinize daha rahatça ulaşabilmesi içindir.</div>
               <div>Lütfen merkezinizde sağlamadığınız hizmetleri bu listeden seçmeyiniz.</div>
