--- a/src/views/user/partials/user-navbar.ejs
+++ b/src/views/user/partials/user-navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg py-3">
   <div class="container">
-    <a class="navbar-brand" href="#">Dialysing<span>.com</span> </a>
+    <a class="navbar-brand" href="/">Dialysing<span>.com</span> </a>
     <a href="#" class="location mx-0"><i class="bi bi-geo-alt-fill" type="button" class="btn btn-outline-white mx-0" data-bs-toggle="modal" data-bs-target="#staticBackdrop"></i><span id="location"></span></a>
     <!-- Location Modal -->
     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
