--- a/src/views/user/pages/clinic/clinic-list.ejs
+++ b/src/views/user/pages/clinic/clinic-list.ejs
@@ -5,8 +5,53 @@
 </head>
 <div class="tm-main-content tm-main-background" id="top">
 
-  <%- include("../../partials/find-center-navbar") %> 
+  <%- include("../../partials/clinic-list-navbar") %>  
 
+  <div class="tm-section tm-bg-img" id="tm-section-1">
+    <div class="ie-container-width-fix-2">
+      <div class="container ie-h-align-center-fix">
+        <div class="row">
+          <div class="col-xs-12 ml-auto mr-auto ie-container-width-fix text-center tm-header-content">
+            <div class="tm-header-title">İstanbul Bölgesindeki Diyaliz Merkezleri</div>
+            <div class="tm-header-text">Tarihlerinizi girin ve aradığınız lokasyona en yakın diyaliz merkezini bulun</div>
+
+            <form action="/clinic/clinic-list" method="GET" class="tm-search-form tm-section-pad-2">
+              <div class="form-row tm-search-form-row">
+                <div class="form-group tm-form-element location-main">
+                  <img src="../user/img/icons/location.png" class="tm-form-element-icon" alt="Icon Location" />
+                  <input name="city" type="text" class="form-control first-child" id="city" name="city" placeholder="Lokasyon Girin" />
+                </div>
+                <div class="form-group tm-form-element date">
+                  <img src="../user/img/icons/calendar.png" class="tm-form-element-icon" alt="Icon Calendar" />
+                  <input name="check-in" type="date" class="form-control date" id="inputCheckIn" placeholder="Diyaliz Tarihinizi Seçiniz" />
+                  <img src="../user/img/icons/down.png" class="tm-form-element-icon-small icon-down dateicon" alt="Icon Down" />
+                </div>
+                <div class="form-group tm-form-element search">
+                  <button type="submit" class="btn btn-outline-primary"><i class="bi bi-search mx-2"></i> 
+                    <span key="centerFind">Diyaliz Bul</span></button>
+                </div>
+              </div>
+            </form>
+
+            <div class="tm-color-white tm-header-properties">
+              <div class="col col-lg-5 tm-header-inner">
+                <img src="../user/img/icons/tick.png" alt="Icons Tick" />
+                <div class="tm-header-inner-text">Rezervasyon ücreti yok</div>
+              </div>
+              <div class="col-md-auto tm-header-inner">
+                <img src="../user/img/icons/tick.png" alt="Icons Tick" />
+                <div class="tm-header-inner-text">Kredi kartı yok</div>
+              </div>
+              <div class="col col-lg-5 tm-header-inner">
+                <img src="../user/img/icons/tick.png" class="mx-0" alt="Icons Tick" />
+                <div class="tm-header-inner-text">Rezervasyon iptal kolaylığı</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div id="section-i" class="tm-p tm-pt-20 tm-pb-20">
     <div class="container">
