modified clinic list

--- a/src/views/user/pages/clinic/clinic-list.ejs
+++ b/src/views/user/pages/clinic/clinic-list.ejs
@@ -33,18 +33,17 @@
               </div>
             </form>
 
-            <div class="tm-color-white tm-header-properties">
-              <div class="col col-lg-5 tm-header-inner">
-                <img src="../user/img/icons/tick.png" alt="Icons Tick" />
-                <div class="tm-header-inner-text">Rezervasyon ücreti yok</div>
-              </div>
-              <div class="col-md-auto tm-header-inner">
-                <img src="../user/img/icons/tick.png" alt="Icons Tick" />
-                <div class="tm-header-inner-text">Kredi kartı yok</div>
-              </div>
-              <div class="col col-lg-5 tm-header-inner">
-                <img src="../user/img/icons/tick.png" class="mx-0" alt="Icons Tick" />
-                <div class="tm-header-inner-text">Rezervasyon iptal kolaylığı</div>
+            <div class="row capatalize">
+              <div class="row justify-content-md-center">
+                <div class="col col-lg-4 text-center">
+                  <h6 class="text-white"><img src="../user/img/icons/tick.png" class="img-fluid mx-1" alt="location" /><span key="cash"> Rezervasyon ücreti yok</span></h6>
+                </div>
+                <div class="col-md-auto text-center">
+                  <h6 class="text-white"><img src="../user/img/icons/tick.png" class="img-fluid mx-1" alt="location" /><span key="creditCard"> Kredi kartı yok</span></h6>
+                </div>
+                <div class="col col-lg-4 text-center">
+                  <h6 class="text-white"><img src="../user/img/icons/tick.png" class="img-fluid mx-1" alt="location" /> <span key="cancelEasy"> Rezervasyon iptal kolaylığı</span></h6>
+                </div>
               </div>
             </div>
           </div>
