--- a/src/views/user/pages/clinic/clinic-list.ejs
+++ b/src/views/user/pages/clinic/clinic-list.ejs
@@ -1,18 +1,16 @@
 <head>
   <link rel="stylesheet" href="../user/css/style.css" />
-  <link rel="stylesheet" href="../user/css/clinic/clinic.css" />
+  <link rel="stylesheet" href="../user/css/clinic/clinic.css" />  
   <link rel="stylesheet" href="../user/css/footer.css" />
 </head>
 <div class="tm-main-content tm-main-background" id="top">
-
   <%- include("../../partials/clinic-list-navbar") %>  
-
   <div class="tm-section tm-bg-img" id="tm-section-1">
     <div class="ie-container-width-fix-2">
       <div class="container ie-h-align-center-fix">
         <div class="row">
           <div class="col-xs-12 ml-auto mr-auto ie-container-width-fix text-center tm-header-content">
-            <div class="tm-header-title">İstanbul Bölgesindeki Diyaliz Merkezleri</div>
+            <div class="tm-header-title"><span>element.companyInformation.companyName </span> bölgesindeki Diyaliz Merkezleri</div>
             <div class="tm-header-text">Tarihlerinizi girin ve aradığınız lokasyona en yakın diyaliz merkezini bulun</div>
 
             <form action="/clinic/clinic-list" method="GET" class="tm-search-form tm-section-pad-2">
