changing user nav bar

--- a/src/views/user/partials/user-navbar.ejs
+++ b/src/views/user/partials/user-navbar.ejs
@@ -76,9 +76,8 @@
           <a href="#" class="question nav-link mt-2"><i class="bi bi-question-circle"></i></a>
         </li>
         <li class="nav-item"><button href="#" class="nav-link btn-third btn-outline-light mx-2 mt-2">Merkezinizi Ekleyin</button></li>
-        <li class="nav-item"><button href="#" class="nav-link btn-second mx-2 mt-2">Kayıt Ol</button></li>
-        <li class="nav-item"><button href="#" class="nav-link btn-second mx-2 mt-2">Giriş Yap</button></li>
-        <li class="nav-item">
+        <li class="nav-item"><a href="/logout" class="nav-link btn-second mx-2 mt-2">Çıkış Yap</a></li> 
+        <!-- <li class="nav-item">
           <div class="dropdown mt-3">
             <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle mt-1 mx-2" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
               <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle" />
@@ -88,7 +87,7 @@
               <li><a class="dropdown-item" href="#">Çıkış Yap</a></li>
             </ul>
           </div>
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
